# simplex-streamlit

./: .gitignore  README.md  app.py  main.py  pyproject.toml
src/vibe_simplex/: __init__.py  models.py  solver.py
tests/: test_solver.py
ui/: Home.py  README.md  run.py
ui/assets/: problem_gallery.json
ui/pages/: 1_Problem_Input.py  2_Solver.py  3_Analysis.py  4_Debugger.py  5_Examples.py
ui/utils/: __init__.py  gallery.py  state.py  theme.py  visualization.py
